--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.firebase:firebase-database:19.2.0'
+
+
+    //Dependency for PayTM
+    implementation('com.paytm:pgplussdk:1.2.3') {
+        transitive = true;
+    }
 }
 apply plugin: 'com.android.application'
 
