--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,23 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
+    implementation "androidx.cardview:cardview:1.0.0"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:recyclerview-v7:28.0.0"
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+implementation 'com.razorpay:checkout:1.5.12'
+    implementation('com.paytm:pgplussdk:1.2.3') {
+        transitive = true;
+    }
+
     implementation 'com.google.firebase:firebase-core:17.2.1'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.firebase:firebase-auth:19.1.0'
