--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.busspass">
-
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.SET_ALARM"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -30,6 +31,9 @@
         <activity android:name=".Checksum"/>
         <activity android:name="com.paytm.pgsdk.PaytmPGActivity"
             android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation|keyboard"/>
+        <receiver android:name=".AlarmReciever"
+            />
+
     </application>
 
 </manifest>
