--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
             android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation|keyboard"/>
         <receiver android:name=".AlarmReciever"
             />
+        <receiver android:name=".NotificationReceiver2"
+            />
 
     </application>
 
