--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/bus_logo_test"
         android:label="@string/app_name"
         android:roundIcon="@drawable/bus_logo_test"
         android:supportsRtl="true"
